--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logger",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -40,5 +40,8 @@
   },
   "files": [
     "lib"
-  ]
+  ],
+  "dependencies": {
+    "diff": "git+http://github.com/StateTree/diff.git"
+  }
 }
