--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "logger",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "build": "webpack --progress --config webpack.config.js",
     "lint": "eslint ./src --ext .js --cache --fix --ext .jsx --cache --fix",
