--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logger",
-  "version": "1.1.7",
+  "version": "1.2.0",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -42,6 +42,7 @@
     "lib"
   ],
   "dependencies": {
-    "diff": "git+http://github.com/StateTree/diff.git"
+    "diff": "git+http://github.com/StateTree/diff.git",
+    "pivoted-linked-list": "git+https://github.com/StateTree/pivoted-linked-list.git"
   }
 }
