--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
   ],
   "dependencies": {
     "pivoted-linked-list": "git+https://github.com/StateTree/pivoted-linked-list.git",
-    "diff": "git+http://github.com/StateTree/diff.git",
+    "diff": "git+http://github.com/StateTree/diff.git"
   }
 }
